# btyd

./: .gitignore  Makefile  bgnbd.csv  pyproject.toml  readthedocs.yaml
.github/workflows/: ci.yml
btyd/models/: __init__.py  beta_geo_model.py
docs/: build_requirements.txt
docs/source/: Changelog.rst  Generate RFM Summaries From a SQL Store.md  High Level Overview.md  High_Level_Overview.md  Quickstart.md  Saving and Loading Models.md  Saving and loading model.md  User Guide.md  api_reference.rst  btyd.datasets.rst  btyd.fitters.rst  btyd.models.rst  btyd.rst  conf.py  index.rst  intro.rst  modules.rst
tests/: test_beta_geo_model.py
