[tool.poetry]
name = "btyd"
version = "0.1b1"
description = "Buy Till You Die and Customer Lifetime Value statistical models in Python."
authors = ["Colt Allen"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pymc = "^4.0.0"
autograd = "1.4"
dill = "0.3.5.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
sphinx = "^5.0.2"
sphinxcontrib-napoleon = "^0.7"
myst-parser = "^0.18.0"
pydata-sphinx-theme = "^0.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
